--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
             background: rgba(0, 0, 0, 0.8);
             backdrop-filter: blur(20px);
             z-index: 1000;
+            text-decoration: none;
+
         }
 
         .nav-content {
@@ -49,6 +51,7 @@
             font-weight: 900;
             letter-spacing: 2px;
             color: var(--text);
+            text-decoration: none;
         }
 
         .nav-links {
@@ -56,6 +59,7 @@
             gap: 3rem;
             height: 100%;
             align-items: center;
+            text-decoration: none;
         }
 
         .nav-links a {
@@ -172,10 +176,12 @@
 <body>
     <nav class="navbar">
         <div class="nav-content">
-            <div class="logo">SKYBOUND</div>
+            <div class="logo">
+                <a href="{% url "home" %}" style="text-decoration: none ; color: white">SKYBOUND</a>
+            </div>
             <div class="nav-links">
                 <a href="{% url 'events_page' %}">Events</a>
-                <a href="#programs">Programs</a>
+                <a href="{% url "courses" %}">Courses</a>
                 <a href="#space">Explore</a>
                 <a href="">About Us</a>
                 <a>
@@ -187,6 +193,8 @@
             </div>
         </div>
     </nav>
+
+    
 
     <main class="content">
         {% block content %}
