--- a/templates/base.html
+++ b/templates/base.html
@@ -182,7 +182,7 @@
             <div class="nav-links">
                 <a href="{% url 'events_page' %}">Events</a>
                 <a href="{% url 'courses' %}">Courses</a>
-                <a href="#space">Explore</a>
+                <a href="{% url "blogs" %}">Explore</a>
                 <a href="">About Us</a>
                 {% if user.is_authenticated %}
                     <a href="">Profile</a>
