--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -9,6 +9,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Out</title>
     <link rel="stylesheet" href="{% static "style.css" %}">
+    <style>
+        body {
+            background-color: black;
+            color: red;
+        }
+        .container {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .btn-group {
+            margin-top: 20px;
+        }
+        .btn-group button, .btn-group a {
+            background-color: red;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .btn-group button:hover, .btn-group a:hover {
+            background-color: darkred;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
