--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -246,7 +246,7 @@
 
             <a href="{% provider_login_url 'google' %}" class="google-button">
                 <i data-lucide="chrome" style="color: #db4437;"></i>
-                Sign up with Google
+                <a href="{% url "account_login" %}">Sign up with Google</a>
             </a>
 
             <div class="login-link">
