--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,7 @@
         footer {
             background: var(--footer-bg);
             padding: 4rem 2rem;
+            margin-top: auto;
         }
 
         .footer-content {
