--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -110,6 +110,7 @@
             color: var(--text);
             font-size: 1rem;
             transition: all 0.3s ease;
+            
         }
 
         .form-group i {
@@ -265,12 +266,12 @@
                 <div class="form-group">
                     <label for="login">Email or Username</label>
                     <i data-lucide="user"></i>
-                    <input type="text" id="login" name="login" required>
+                    <input type="text" id="login" name="login" required autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
                     <i data-lucide="lock"></i>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required autocomplete='off'>
                 </div>
 
                 <div class="remember-forgot">
