--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -215,7 +215,7 @@
             <h1 class="section-title">Join the Adventure</h1>
             <p class="section-subtitle">Create your account to start your skydiving journey</p>
             
-            <form method="post" action="{% url 'account_signup' %}">
+            <form method="post" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="username">Username</label>
