Event Booking form-NoPayment

--- a/events/templates/email_template.html
+++ b/events/templates/email_template.html
@@ -94,7 +94,7 @@
             <p>{{ event.description|safe }}</p>
         </div>
         <div class="button-container">
-            <a href="#" target="_blank">Book Now</a>
+            <a href="http://127.0.0.1:8000/booking/event-booking/" target="_blank">Book Now</a>
         </div>
         <div class="attachment-section">
             <h3>Attachment</h3>
