Profile_page, Course_payment, (001)

--- a/events/templates/course/course_detail.html
+++ b/events/templates/course/course_detail.html
@@ -87,7 +87,7 @@
     <div class="cta-content">
         <h2>Begin Your Journey Today</h2>
         <p>Limited spots available for the next batch</p>
-        <a href="#enroll" class="cta-button">
+        <a href="{% url "course_booking" course.id %}" class="cta-button">
             Enroll Now
             <span class="arrow">&rarr;</span>
         </a>
