--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            background-color: black;
         }
 
         .navbar {
@@ -234,7 +235,7 @@
                 <a href="{% url 'blogs' %}">Explore</a>
                 <a href="#">About Us</a>
                 {% if user.is_authenticated %}
-                    <a href="#">Profile</a>
+                    <a href="{% url "profile" %}">Profile</a>
                     <a href="{% url 'account_logout' %}">Logout</a>
                 {% else %}
                     <a href="{% url 'account_login' %}">Login</a>
@@ -272,7 +273,7 @@
                 <h3>Support</h3>
                 <ul class="footer-links">
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="{% url "faq" %}">FAQs</a></li>
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Privacy</a></li>
                 </ul>
